# ru_gpt_faster_transformer

./: CMakeLists.txt  README.md
data/: vocab.txt
include/ru_gpt_ft/: ru_gpt_ft.hpp  ru_gpt_terminal_session.hpp  ru_gpt_tokenizer.hpp  types.hpp
scripts/: convert_to_ft.py
src/: main.cc  main.cpp  ru_gpt_ft.cpp  ru_gpt_tokenizer.cpp
test/: test_ru_gpt_tokenizer.cpp
